# kokkai-summary

./: .gitattributes  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  postgresql.conf  ruff_config.toml
api/: Dockerfile  main.py  pyproject.toml
api/app/graphql/: dataloaders.py  resolvers.py  schema.py
db/: alembic.ini  pyproject.toml
db/src/kokkai_db/: __init__.py  database.py  schema.py
db/src/migrations/: env.py
db/src/migrations/versions/: 2401244fb033_v3_fix_datetime_column.py  afd1d1b644bc_v2_create_session.py  b645a1f2546b_add_prompt_version_to_summaries.py  c8394d8c4db0_v1_first_creation.py
scrape/: .gitignore  main.py  pyproject.toml
scrape/lib/: crud.py  database.py  request_schema.py
scrape/scraper/: items.py  middlewares.py  pipelines.py  schemas.py  settings.py
scrape/scraper/spiders/: meetings_spider.py  sessions_spider.py
scrape/src/: api_client.py  crud.py  response_schema.py
scrape/src/meetings/: api_client.py  crud.py  request_schema.py  response_schema.py
scrape/src/sessions/: convert_kaiji.py  kaiji.json  master_data.json
secrets/: README.md
shared/kokkai_db/src/kokkai_db/: database.py  schema.py
summary/: .gitignore  Dockerfile  FKG004_20250803_130032.md  FKG004_20250803_130032.txt  FKG004_20250803_131210.md  FKG004_20250803_131210.txt  cronjob  main.py  prompt.md  pyproject.toml
summary/app/: config.py
summary/app/db/: session.py
summary/app/services/: gemini_api.py  summary_service.py
summary/app/utils/: retry.py  text_processing.py
summary/src/: summary.py
tools/: postgres_dump.ps1  postgres_restore.ps1
web/: .gitignore  Dockerfile  biome.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/app/: app.css  root.tsx  routes.ts
web/app/components/: pulldown.tsx
web/app/components/layout/: header.tsx  index.tsx
web/app/components/markdown/: a.tsx  blockquote.tsx  code.tsx  h1.tsx  h2.tsx  h3.tsx  hr.tsx  index.ts  li.tsx  ol.tsx  p.tsx  styledMarkdown.tsx  ul.tsx
web/app/lib/: api.ts  context.tsx
web/app/routes/about/: route.tsx
web/app/routes/index/: pulldown.tsx  route.tsx  welcome.tsx
web/app/routes/summary/: route.tsx
web/app/static/: message.json
web/tests/: e2e.spec.ts
