[project]
name = "kokkai-db"
version = "0.1.0"
description = "Database schema for Kokkai Summary"
readme = "README.md"
authors = [
    { name = "npkk", email = "kob4.nemu@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "alembic>=1.16.4",
]

[tool.ruff]
extend = '../ruff_config.toml'