[project]
name = "scrape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "kokkai-db",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.42",
    "scrapy>=2.11.2",
]

[tool.uv.sources]
kokkai-db = { path = "../db" }

[tool.ruff]
extend = '../ruff_config.toml'